[package]
name = "jals-tests"
version.workspace = true
edition.workspace = true
# The crate ships two binaries (jals-tests, jals-golden); keep `cargo run -p
# jals-tests` resolving to the parse-soundness CLI.
default-run = "jals-tests"

[lib]
name = "jals_tests"
path = "src/lib.rs"

[[bin]]
name = "jals-tests"
path = "src/main.rs"

[[bin]]
name = "jals-golden"
path = "src/bin/golden.rs"

[dependencies]
clap.workspace = true
jals-config.workspace = true
jals-fmt.workspace = true
jals-syntax.workspace = true
rayon.workspace = true
similar.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
